# python-cross-process-bridge

./: .gitignore  README.md  cross_process.py  cross_process_runnable.py  pyproject.toml  run_cross_process.py
examples/: basic.py  context_example.py  example.py  extended_inheritance.py  instance_creator_example.py
exmaples/: type_example.py
src/cross_process/: __init__.py  cross_process.py  cross_process_runner.py  instance_creator.py  run_cross_process.py
src/cross_process_bridge/: __init__.py  child_process_bridge.py  cross_process_bridge.py  models.py  run_cross_process.py
