[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cross_process_bridge"
version = "1.0.0"
authors = [
  { name="Avi Mayer", email="mayeravraham@gmail.com" },
]
description = "Create an instance in a new process and call its functions seamlessly"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/avraham-mayer/python-cross-process-bridge"
